@@ -1,1 +1,4 @@
 section=${section,-10}${path}
+
+help.sections=List the currently defined sections on the site.
+help.sections.specific=SITE SECTIONS\n\ List the currently defined sections on the site.
